fixed errors after cherry-picking to 7.x